# Albedo

./: .gitignore  BuilderForWindows.bat  CMakeLists.txt  INSTALL.md  README.md  TODO.md  build.bat  build.sh  install.bat
APP/: app.cc
APP/asset/: README.md
APP/asset/shader/: cubemap.vert  opaque.vert  opaque.vert.spv  postprocessing.vert  skybox.frag  skybox.frag.spv
APP/asset/shaders/: cubemap.vert  cubemap.vert.spv  opaque.vert  skybox.frag  skybox.vert.spv
APP/config/: app.json  logo.aps  logo.rc
APP/editor/: editor.cc  editor.h
APP/global/: _impl.cc  config.h
APP/runtime/: runtime.cc  runtime.h
APP/runtime/camera/: camera.cc  camera.h
APP/runtime/editor/: editor.cc  editor.h
APP/runtime/render/: renderer.cc  renderer.h
APP/runtime/renderer/: renderer.cc  renderer.h
APP/sandbox/: sandbox.cc  sandbox.h
APP/setting/: logo.aps  logo.rc
APP/settings/: logo.aps  logo.rc
APP/startup/: config.h  local.h  startup.h
Albedo/: CMakelists.txt
Albedo/core/: startup.cc  startup.h
Albedo/core/runtime/: runtime.h  (+1 more)
Albedo/engine/: startup.cc  startup.h
Albedo/resource/: CMakeLists.txt
AlbedoEngine/: CMakeLists.txt
AlbedoEngine/Editor/: CMakeLists.txt
AlbedoEngine/Editor/source/: editor.cc  editor.h
AlbedoEngine/Editor/source/Internal/: editorpass.cc  editorpass.h
AlbedoEngine/Editor/source/Internal/pipelines/: dearimgui.cc  dearimgui.h
AlbedoEngine/Modules/: Albedo.Core.Async  Albedo.Core.Event  Albedo.Core.File  Albedo.Core.Math  Albedo.Core.Norm  Albedo.Core.Time  Albedo.Core.World  Albedo.Editor  Albedo.Graphics  Albedo.Pattern  Albedo.System.Asset  Albedo.System.Control  Albedo.System.Window
AlbedoEngine/Runtime/: CMakeLists.txt
AlbedoEngine/Runtime/Albedo/Core/Async/: async_task.h
AlbedoEngine/Runtime/Albedo/Core/Event/: basic_event.cc  basic_event.h  event_manager.cc  event_manager.h
AlbedoEngine/Runtime/Albedo/Core/File/: basic_file.h  json.h
AlbedoEngine/Runtime/Albedo/Core/Log/: log.cc  log.h
AlbedoEngine/Runtime/Albedo/Core/Math/: _impl.cc  angle.h  float.h  graphics.h  integer.h
AlbedoEngine/Runtime/Albedo/Core/Norm/: assert.h  concepts.h  types.h
AlbedoEngine/Runtime/Albedo/Core/Time/: duration.h
AlbedoEngine/Runtime/Albedo/Core/World/: world.h
AlbedoEngine/Runtime/Albedo/Graphics/: GRI.cc  GRI.h  RHI.h  _impl.cc  common.h  model.cc  model.h  widgets.h
AlbedoEngine/Runtime/Albedo/Graphics/Internal/: RHI.cc  RHI.h  Vulkan.cc  Vulkan.h
AlbedoEngine/Runtime/Albedo/Pattern/: prototype.h  singleton.h  subscription.h
AlbedoEngine/Runtime/Albedo/Platform/: path.h
AlbedoEngine/Runtime/Albedo/System/Asset/: asset_system.h  asset_types.cc  asset_types.h
AlbedoEngine/Runtime/Albedo/System/Control/: _impl.cc  action_types.h  control_event.cc  control_system.cc  control_system.h  keyboard.cc  keyboard.h  mouse.cc  mouse.h
AlbedoEngine/Runtime/Albedo/System/Window/: window_system.cc  window_system.h
AlbedoEngine/Runtime/Modules/: Albedo.Core  Albedo.Core.Async  Albedo.Core.Event  Albedo.Core.File  Albedo.Core.Math  Albedo.Core.Norm  Albedo.Core.Time  Albedo.Core.World  Albedo.Graphics  Albedo.Graphics.RHI  Albedo.Graphics.Widgets  Albedo.Pattern  Albedo.Platform  Albedo.System  Albedo.System.Asset  Albedo.System.Control  Albedo.System.Window
AlbedoEngine/Runtime/source/AlbedoCore/File/: basic_file.h  binary.h  json.h
AlbedoEngine/Runtime/source/AlbedoCore/Math/: float.h  integer.h  matrix.h
AlbedoEngine/Runtime/source/AlbedoCore/Norm/: assert.h  types.h
AlbedoEngine/Runtime/source/AlbedoCore/World/: world.h
AlbedoEngine/Runtime/source/AlbedoGraphics/: GRI.cc  GRI.h  model.cc  model.h
AlbedoEngine/Runtime/source/AlbedoGraphics/Internal/: RHI.cc  RHI.h
AlbedoEngine/Runtime/source/AlbedoPattern/: singleton.h  subscription.h
AlbedoEngine/Runtime/source/AlbedoSystem/Control/: control_system.h
AlbedoEngine/Scripts/: INIT_ALBEDO_APP.cmake  albedo_macros.cmake  init_project.cmake
AlbedoSDK/: CMakeLists.txt
AlbedoSDK/SDK/AlbedoCore/Async/: async_task.cc
AlbedoSDK/SDK/AlbedoCore/Event/: basic_event.cc  basic_event.h  event_manager.cc
AlbedoSDK/SDK/AlbedoCore/World/: object.h
AlbedoSDK/SDK/AlbedoGraphics/: GRI.cc  GRI.h
AlbedoSDK/SDK/AlbedoGraphics/Internal/: RHI.cc  RHI.h
AlbedoSDK/SDK/AlbedoSystem/Asset/: asset_system.cc
AlbedoSDK/SDK/AlbedoSystem/Control/: control_event.h  event_system.cc  event_system.h
AlbedoSDK/SDK/AlbedoSystem/UI/: UI_system.cc  UI_system.h
AlbedoSDK/SDK/AlbedoSystem/Window/: window_system.cc  window_system.h
AlbedoSDK/SDK/AlbedoUtils/: debug.h
AlbedoSDK/modules/: Albedo.Core  Albedo.Core.Async  Albedo.Core.Event  Albedo.Core.Math  Albedo.Core.Norm  Albedo.Core.Time  Albedo.Core.World  Albedo.Editor  Albedo.Graphics  Albedo.Pattern  Albedo.System.Asset  Albedo.System.Control  Albedo.System.Window
AlbedoSDK/source/AlbedoCore/Async/: async_task.h
AlbedoSDK/source/AlbedoCore/Event/: basic_event.cc  event_manager.cc  event_manager.h
AlbedoSDK/source/AlbedoCore/Math/: _impl.cc  angle.h  concepts.h  float.h  graphics.h  integer.h  matrix.h  vector.h
AlbedoSDK/source/AlbedoCore/Math/Module/: basic.h
AlbedoSDK/source/AlbedoCore/Norm/: assert.h  concepts.h
AlbedoSDK/source/AlbedoCore/Time/: common.h  duration.h  stopwatch.h
AlbedoSDK/source/AlbedoCore/World/: coordinate.h  world.h
AlbedoSDK/source/AlbedoEditor/: editor.cc  editor.h
AlbedoSDK/source/AlbedoEditor/Internal/: editorpass.cc  editorpass.h
AlbedoSDK/source/AlbedoEditor/Internal/pipelines/: dearimgui.cc  dearimgui.h
AlbedoSDK/source/AlbedoGeometry/: vertex.h
AlbedoSDK/source/AlbedoGraphics/: GRI.cc  GRI.h  GRIEnums.h  widgets.cc  widgets.h
AlbedoSDK/source/AlbedoGraphics/Internal/: RHI.cc  RHI.h
AlbedoSDK/source/AlbedoPattern/: observer.h  singleton.h
AlbedoSDK/source/AlbedoSystem/Asset/: asset_system.h
AlbedoSDK/source/AlbedoSystem/Control/: control_system.cc  control_system.h
AlbedoSDK/source/AlbedoSystem/UI/: UI_system.cc  UI_system.h
AlbedoSDK/source/AlbedoSystem/Window/: window_system.cc  window_system.h
AlbedoSDK/source/AlbedoUtils/: time.h
source/: main.cpp
(+166 files in other folders)
