# AlbedoEditor
file(GLOB_RECURSE ALBEDO_EDITOR_HEADER "source/*.h")
file(GLOB_RECURSE ALBEDO_EDITOR_SOURCE "source/*.cc")
source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}/source"
             FILES ${ALBEDO_EDITOR_HEADER} ${ALBEDO_EDITOR_SOURCE})

add_library(
    ${ALBEDO_EDITOR_NAME} STATIC
    ${ALBEDO_EDITOR_HEADER} 
    ${ALBEDO_EDITOR_SOURCE}
)

target_link_libraries(
    ${ALBEDO_EDITOR_NAME}
    PRIVATE
    ${ALBEDO_RUNTIME_NAME})

set_target_properties(
    ${ALBEDO_EDITOR_NAME}
    PROPERTIES FOLDER "${PROJECT_NAME}")